--- a/view/user/default/profile.phtml
+++ b/view/user/default/profile.phtml
@@ -1,10 +1,22 @@
 <div class="row">
     <div class="col-xs-12">
         <div class="card">
-            <ul class="nav nav-tabs tab-stats">
-                <li role="user-details" class="active">
-                    <a href="#user-details" aria-controls="user-details" role="tab" data-toggle="tab" aria-expanded="true">
-                        <span class="glyphicon glyphicon-list-alt"></span>  <?= $this->translate('User Details') ?>
+            <div class="card hovercard">
+                <div class="card-background">                    
+                    <img class="profile-img lazy-loaded card-bkimg" src="<?= $this->userModel->getLoggedUser()->getPeople()->getImage() ? $this->userModel->getLoggedUser()->getPeople()->getImage()->getUrl() : $this->default_user_image_profile ?>">                    
+                </div>
+                <div class="useravatar">
+                    <img src="<?= $this->userModel->getLoggedUser()->getPeople()->getImage() ? $this->userModel->getLoggedUser()->getPeople()->getImage()->getUrl() : $this->default_user_image_profile ?>">
+                </div>
+                <div class="card-info"> <span class="card-title">
+                        <?= $this->user->getPeople()->getName() ?>
+                    </span>
+                </div>
+            </div>
+            <ul class="nav nav-tabs tab-stats">                
+                <li role="user-phone" class="active">
+                    <a href="#user-phone" aria-controls="user-phone" role="tab" data-toggle="tab" aria-expanded="false">
+                        <span class="glyphicon glyphicon-earphone"></span> <?= $this->translate('Phones') ?>
                     </a>
                 </li>
                 <li role="user-adress" class="">
@@ -16,12 +28,7 @@
                     <a href="#user-email" aria-controls="user-email" role="tab" data-toggle="tab" aria-expanded="false">
                         <span class="glyphicon glyphicon-envelope"></span> <?= $this->translate('Emails') ?>
                     </a>
-                </li>
-                <li role="user-phone" class="">
-                    <a href="#user-phone" aria-controls="user-phone" role="tab" data-toggle="tab" aria-expanded="false">
-                        <span class="glyphicon glyphicon-earphone"></span> <?= $this->translate('Phones') ?>
-                    </a>
-                </li>
+                </li>                
                 <li role="user" class="">
                     <a href="#user" aria-controls="user" role="tab" data-toggle="tab" aria-expanded="false">
                         <span class="glyphicon glyphicon-user"></span> <?= $this->translate('Users') ?>
@@ -32,19 +39,16 @@
                         <span class="glyphicon glyphicon-file"></span> <?= $this->translate('Documents') ?>
                     </a>
                 </li>                                
-            </ul>
-            <div class="card-body tab-content">
-                <div role="tabpanel" class="tab-pane active" id="user-details">                        
-                    <?= $this->render("user/form/user-details.phtml"); ?>
+            </ul>                        
+            <div class="card-body tab-content">                
+                <div role="tabpanel" class="tab-pane active" id="user-phone"> 
+                    <?= $this->render("user/form/user-phone.phtml"); ?>
                 </div>
                 <div role="tabpanel" class="tab-pane" id="user-adress">                        
                     <?= $this->render("user/form/user-adress.phtml"); ?>
                 </div>
                 <div role="tabpanel" class="tab-pane" id="user-email"> 
                     <?= $this->render("user/form/user-email.phtml"); ?>
-                </div>
-                <div role="tabpanel" class="tab-pane" id="user-phone"> 
-                    <?= $this->render("user/form/user-phone.phtml"); ?>
                 </div>
                 <div role="tabpanel" class="tab-pane" id="user">
                     <?= $this->render("user/form/user.phtml"); ?>
