--- a/view/user/default/login.phtml
+++ b/view/user/default/login.phtml
@@ -6,7 +6,7 @@
                 <div class="app-form">
                     <div class="form-header">                        
                         <div class="profile-image-container">
-                            <img class="profile-image lazy-loaded" data-default-image-profile="<?= $this->default_user_image_profile ?>" src="/user/profile-image/id/0/profile.png">
+                            <img class="profile-image lazy-loaded" data-default-image-profile="<?= $this->default_user_image_profile ?>" src="<?= $this->default_user_image_profile ?>">
                         </div>
                         <div class="app-brand">
                             <img class="lazy-loaded" width="210px" height="66px" alt="<?= $this->translate('Application Name') ?>" src="<?= $this->defaultCompany->getImage()->getUrl() ?>">
