--- a/view/user/form/user-documents.phtml
+++ b/view/user/form/user-documents.phtml
@@ -3,7 +3,10 @@
     <fieldset>
         <form class="api-form form-horizontal" action="/user-document.form" method="POST" name="form-user-document" id="form-user-document" role="form" data-childs="[&quot;people&quot;,&quot;log&quot;]">
             <!-- Form Name -->
-            <i title="<?= $this->translate('Add new document for this user') ?>" class="fa fa-plus pull-right" data-add-form="/user/add-document.form" aria-hidden="true"></i>
+            <button title="<?= $this->translate('Add new document for this user') ?>" type="button" class="btn btn-success pull-right" data-add-form="/user/add-document.form">
+                <i class="fa fa-plus" aria-hidden="true"></i>
+                <?= $this->translate('Add') ?>
+            </button>
             <legend><?= $this->translate('Documents') ?></legend>            
             <div id="container-delete-document-{id}" class="form-group hidden clone highlight" data-clone="add-user-document">                
                 <label class="col-md-3 control-label" id="label-document-{id}" for="input-document">{document_type}: </label>
