--- a/view/user/default/login.phtml
+++ b/view/user/default/login.phtml
@@ -1,56 +1,1 @@
-<div class="app-container app-login">    
-    <div class="flex-center">        
-        <div class="app-header"></div>
-        <div class="app-body">            
-            <div class="app-block">
-                <div class="app-form">
-                    <div class="form-header">                        
-                        <div class="profile-image-container">
-                            <img class="profile-image lazy-loaded" data-default-image-profile="<?= $this->default_user_image_profile ?>" src="<?= $this->default_user_image_profile ?>">
-                        </div>
-                        <div class="app-brand">
-                            <img class="lazy-loaded" width="210px" height="66px" alt="<?= $this->translate('Application Name') ?>" src="<?= $this->defaultCompany->getImage()->getUrl() ?>">
-                        </div>
-                    </div> 
-                    <div class="row username-container">
-                        <h4>&nbsp;
-                            <span class="user-name" style="display: none"></span>
-                            &nbsp;</h4>
-                    </div>
-                    <form data-success-url="<?= $this->login_referrer ?: '/' ?>" id="login-form" class="form-horizontal" action="/user/login.json" method="POST">
-                        <div class="input-group">
-                            <span class="input-group-addon" id="basic-addon1">
-                                <i class="fa fa-user" aria-hidden="true"></i></span>              
-                            <input data-valide-ajax="true" data-get-image-profile="/user/get-image-profile/username/" id="username" data-mask-regex="({regex: '[a-za-zA-Z0-9]{3,15}'})" data-validation="length user_exists" data-validation-length="3-15" name="username" type="text" placeholder="<?= $this->translate('Enter your Username') ?>" class="form-control input-md" required>                            
-                        </div>
-                        <div class="input-group">
-                            <span class="input-group-addon" id="basic-addon2">
-                                <i class="fa fa-key" aria-hidden="true"></i></span>
-                            <input id="password" name="password" type="password" data-validation="required" placeholder="<?= $this->translate('Enter a password') ?>" class="form-control input-md" required>
-                        </div>
-                        <div class="text-center">                            
-                            <button data-save="/user/login.json" data-success-url="<?= $this->login_referrer ?: '/' ?>" id="login" name="login" class="btn btn-success btn-submit"><?= $this->translate('Login') ?></button>                            
-                        </div>
-                    </form>
-                    <!--
-                                        <div class="form-line">
-                                            <div class="title">OR</div>
-                                        </div>
-                                        <div class="form-footer">
-                                            <button type="button" class="btn btn-default btn-sm btn-social __facebook">
-                                                <div class="info">
-                                                    <i class="icon fa fa-facebook-official" aria-hidden="true"></i>
-                                                    <span class="title">Login with Facebook</span>
-                                                </div>
-                                            </button>
-                                        </div>
-                    -->
-                    <a class="pull-left" href="/user/create-account"><?= $this->translate('Create Account') ?></a>       
-                    <a class="pull-right" href="/user/forgot-password"><?= $this->translate('Forgot password ?') ?></a>
-                </div>                
-            </div>            
-        </div>
-        <div class="app-footer">            
-        </div>
-    </div>    
-</div>
+<?= $this->render("core/default/login-create-account.phtml"); ?>
